--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 
-#src/main/resources/application.properties
+src/main/resources/application-dev.properties
+.gitignore
 
 ### STS ###
 .apt_generated
