send email with credentials to students - added username / password to student form

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ c3p0.test_connection_on_checkin = true
 c3p0.preferred_test_query=select 1 from dual
 c3p0.url = jdbc:oracle:thin:@1.2.3.4:1521:xe
 c3p0.username =
-c3p0.password = #
+c3p0.password =
 c3p0.driverClassName = oracle.jdbc.OracleDriver
 
 mail.host=smtp.gmail.com
