--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,11 +8,11 @@ c3p0.max_size = 15
 c3p0.acquire_increment = 1
 c3p0.idle_test_period = 300
 c3p0.max_idle_time_excess_connections = 400
-c3p0.test_connection_on_checkin = true
+c3p0.test_connection_on_checkin = false
 c3p0.preferred_test_query=select 1 from dual
 c3p0.url = jdbc:oracle:thin:@1.2.3.4:1521:xe
 c3p0.username =
-c3p0.password =
+c3p0.password = 
 c3p0.driverClassName = oracle.jdbc.OracleDriver
 
 mail.host=smtp.gmail.com
